--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -535,7 +535,7 @@ a.more-link{
     			.field-name-field-image{
     				img{
     					//width: 100%;
-    					//max-height: 310px; 
+    					//max-height: 310px;
     				}
     			}
     			h4{
@@ -1212,13 +1212,15 @@ a.more-link{
 				padding-top: 20px;
 				.views-item-columns-container{
 					background-color: @color-primary;
-					min-height: 571px;
+					min-height: 598px;
 					.views-field-field-image{
 						min-height: 202px;//testing
+						padding: 10px;
+						padding-bottom: 0px;
 						img[alt="tools_default.png"]{
 							margin: 0 auto;
 							padding: 25px;
-							max-height: 250px;//testing
+							max-height: 260px;//testing
 						}
 					}
 					.tool-teaser-content-wrapper{
@@ -1243,7 +1245,7 @@ a.more-link{
 							}
 						}
 						.tools_see_more-processed{
-							margin-left: 207px;
+							margin-left: 0px;
 							a.more-link{
 								text-align: right;
 								margin-top: 15px;
