--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
@@ -128,4 +128,26 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 /*END QUICKTABS FOR COUNTRY DETAIL AND PARTNER DETAIL*/
 
 
+/*WHAT'S NEW SECTION
+*********************************************************************/
+.page-what-is-new{
+	.panels-flexible-row-new-6{
+		.panels-flexible-region-new-new_tools{
+			.view-id-tools{
+				.views-item-columns-container{
+					min-height: 598px;
+					.views-field-field-image{
+						min-height: 202px;//testing
+						img[alt="tools_default.png"]{
+							max-height: 225px;//testing
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+
+
 }
