--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -525,6 +525,7 @@ h1.page-header {
 						float: left;
 						margin-right: 15px;
 						margin-bottom: 7px;
+						padding: 0px !important;
 						img[alt="tools_default.png"]{
 							margin: 0 auto;
 							padding: 0px;
