--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -264,6 +264,10 @@ a.more-link{
 				background: url('../images/icons/201b.png') no-repeat;
 				background-size: 23px;
 			}
+			li.napo-share-widget-google-plus{
+				background: url('../images/icons/222b.png') no-repeat;
+				background-size: 23px;
+			}
 		}
 	}
 }
@@ -297,6 +301,10 @@ a.more-link{
 		}
 		li.napo-share-widget-linkedin{
 			background: url('../images/icons/201b.png') no-repeat;
+			background-size: 23px;
+		}
+		li.napo-share-widget-google-plus{
+			background: url('../images/icons/222b.png') no-repeat;
 			background-size: 23px;
 		}
 	}
