--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -191,7 +191,7 @@ h1.page-header {
 		    	.item-0{
 		    		a{
 			    		img{
-			    			height: 185px;
+			    			min-height: 185px;
 			    		}
 			    	}
 		    	}
@@ -615,7 +615,7 @@ h1.page-header {
 		.field-type-image {
 		    margin-top: 5px;
 		    img{
-		    	height: 185px;
+		    	min-height: 145px;
 		    }
 		}
 	}
@@ -1516,6 +1516,7 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 						}
 			    	}
 			    	.related-partners-2 > div > {
+			    		display: block !important;
 			    		.even:first-child{
 			    			width: 100% !important;
 			    			display: block !important;
