css changes- filters responsive and adding new icons 15:03 23-09-2016

--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
@@ -107,7 +107,7 @@
 ***********************************************************/
 div[id*="quicktabs-container-view__country_partner_content__block"]{
 	.quicktabs-tabpage{
-		.node-practical-tool, .node-promotional-material{
+		.node-practical-tool, .node-promotional-material, .node-strategic-documentation{
 			.field-name-tools-see-more{
 				margin-left: 258px !important;
 			}
