--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -337,7 +337,7 @@ a.more-link{
 }
 
 //PDF FILES promotional resources
-.field-name-field-resource-fc{
+.field-name-field-resource-fc, .field-name-field-resource-sdoc{
 	margin-top: 25px;
 	ul{
 		list-style: none;
@@ -2102,6 +2102,7 @@ div[id ^= "mini-panel-partner_in_country"]{
 		padding-bottom: 30px;
 		h2{
 			margin-top: 0px;
+			line-height: 1.3em;
 		}
 		.partner-image-container{
 			img{
@@ -2305,6 +2306,13 @@ div[id ^= "mini-panel-partner_in_country"]{
     		    height: 45px;
     		}
 		}
+		.group-strategic_documentation{
+			&:after{
+    		    .section-icons("../images/icons/070.png");
+    		    width: 45px;
+    		    height: 45px;
+    		}
+		}
 		.group-news{
 			&:after{
     		    .section-icons("../images/icons/005.png");
@@ -2327,6 +2335,8 @@ div[id ^= "mini-panel-partner_in_country"]{
 		    padding-bottom: 5px;
 		    font-family: 'Oswald';
 		    margin-top: 30px;
+		    margin-left: -15px;
+		    margin-right: -15px;
 		}
 		.quicktabs-views-group {
 			.node-teaser{
@@ -2438,7 +2448,7 @@ div[id ^= "mini-panel-partner_in_country"]{
 			}
 		}
 		
-		.node-practical-tool, .node-promotional-material{
+		.node-practical-tool, .node-promotional-material, .node-strategic-documentation{
 			.field-name-tools-see-more{
 				margin-left: 310px;
 			}
@@ -2565,6 +2575,32 @@ div[id ^= "mini-panel-partner_in_country"]{
 				}
 		    }
 		}
+		.tab-title-strategic_documentation{
+			&:before{
+				content: "";
+				background: url("../images/icons/documentation-icon-w.png") no-repeat;
+				background-size: 100%;
+			    display: inline-block;
+			    width: 25px;
+			    height: 25px;
+			    vertical-align: middle;
+			    background-position: 0px -2px;
+			    margin-right: 10px;
+			}
+			&:hover{
+		    	&:before{
+					content: "";
+					background: url("../images/icons/documentation-icon-p.png") no-repeat;
+					background-size: 100%;
+				    display: inline-block;
+				    width: 25px;
+				    height: 25px;
+				    vertical-align: middle;
+				    background-position: 0px -2px;
+				    margin-right: 10px;
+				}
+		    }
+		}
 		a{
 			color: @color-white;
 			font-style: italic;
@@ -2572,8 +2608,7 @@ div[id ^= "mini-panel-partner_in_country"]{
 			text-decoration: none !important;
 			&:hover{
 				background-color: rgba(255,255,255,0.8);
-				color: @color-text-purple-darker;
-				color: @color-text-purple-darker;
+				color: @color-text-purple;
 				text-decoration: none !important;
 				ul{
 					display: block !important;
