--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -208,7 +208,7 @@ a.more-link{
 }
 
 /*Etiquetas azuler de pais e idioma*/
-.field.field-name-field-country, .field-type-language-field, .field-name-field-sector {
+.field.field-name-field-country, .field-type-language-field, .field-name-field-sector, .field-name-field-promotional-material-type {
     background-color: #10b2e4;
     display: inline-block;
     color: white;
