--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -73,6 +73,7 @@
 	    			display: none;
 	    			height: 29px !important;
 	    			width: 80% !important;
+	    			z-index: 10;
 	    		}
 	    		button{
 	    			height: 29px;
@@ -81,6 +82,9 @@
 	    			float: right;
 	    			background-color: rgba(255,255,255,0) !important;
 	    		}
+	    		.input-search-display{
+					right: 10px;
+				}
 			}
 			#block-menu-block-3{
 				display: inline-block;
