--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -147,6 +147,7 @@
 			    background-position: 99% -13px;
 			}
 			#search-block-form{
+				position: relative;
 				input{
 					border-radius: 0px;
 					border: 2px solid @color-menu-icons;
@@ -174,6 +175,7 @@
     					}
 					}
 				}
+				
 			}
 		}
 		#block-menu-block-3{
@@ -341,3 +343,12 @@
 
 /*End estilos header
 **************************************************/
+
+
+/*jquery functionality for search icon*/
+@media only screen and (min-width : 993px) {
+	.input-search-display{
+		display: none;
+	}
+}
+	
