--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -65,6 +65,18 @@
     			width: 29px;
     			float: right;
     		}
+    		.input-search-display{
+				width: 30px;
+				height: 30px;
+				background-color: red;
+				position: absolute;
+				right: 0px;
+				top: 0px;
+				display: block;
+				z-index: 1000;
+				opacity: 0;
+				cursor: pointer;
+			}
 		}
 		#block-menu-block-3{
 			display: block;
