--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -3779,3 +3779,15 @@ div[id ^= "mini-panel-partner_in_country"]{
 	}
 }
 /*End lingua tools*/
+
+/*retranslate*/
+.page-node-retranslate{
+	#osha-tmgmt-retranslate-ui-form{
+		margin: 0px 40px;
+		[type=checkbox]{
+		position: absolute !important;
+		margin-left: 0px !important;
+		}
+	}
+}
+/*end retranslate*/
