--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -3618,8 +3618,10 @@ div[id ^= "mini-panel-partner_in_country"]{
     					margin-bottom: 0px;
     					.partner-image-container{
 							width: 100%;
-							max-height: 125px;
-							min-height: 125px;
+							max-height: 120px;
+							img{
+								max-width: 150px;
+							}
     					}
     					.partner-text-container{
 							width: 100%;
